ci for input.html

--- a/button.html
+++ b/button.html
@@ -151,25 +151,35 @@
 
                         <h4>大按钮组合</h4>
                         <div class="example">
-                            <div class="ui-button-group">
-                                <button type="button" class="ui-button big">Left</button>
-                                <button type="button" class="ui-button active big">Middle</button>
-                                <button type="button" class="ui-button big">Right</button>
+                            <div class="ui-button-group large">
+                                <button type="button" class="ui-button">Left</button>
+                                <button type="button" class="ui-button active">Middle</button>
+                                <button type="button" class="ui-button">Right</button>
+                            </div>
+                            <div class="ui-button-group big">
+                                <button type="button" class="ui-button">Left</button>
+                                <button type="button" class="ui-button active">Middle</button>
+                                <button type="button" class="ui-button">Right</button>
+                            </div>
+                            <div class="ui-button-group massive">
+                                <button type="button" class="ui-button">Left</button>
+                                <button type="button" class="ui-button active">Middle</button>
+                                <button type="button" class="ui-button">Right</button>
                             </div>
                         </div>
 
                         <h4>组合的组合</h4>
                         <div class="example">
                             <div>
-                                <div class="ui-button-group">
-                                    <button type="button" class="ui-button big">Left</button>
-                                    <button type="button" class="ui-button active big">Middle</button>
-                                    <button type="button" class="ui-button big">Right</button>
+                                <div class="ui-button-group big">
+                                    <button type="button" class="ui-button">Left</button>
+                                    <button type="button" class="ui-button active">Middle</button>
+                                    <button type="button" class="ui-button">Right</button>
                                 </div>
-                                <div class="ui-button-group">
-                                    <button type="button" class="ui-button big">Left</button>
-                                    <button type="button" class="ui-button active big">Middle</button>
-                                    <button type="button" class="ui-button big">Right</button>
+                                <div class="ui-button-group big">
+                                    <button type="button" class="ui-button">Left</button>
+                                    <button type="button" class="ui-button active">Middle</button>
+                                    <button type="button" class="ui-button">Right</button>
                                 </div>
                             </div>
                         </div>
