type and table clean up.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <ul id="navigator">
                         <li class="ui-menu-item" title="介绍"><a href="home.html" target="container-frame"><i class="fa fa-home"></i></a></li>
                         <li class="ui-menu-item" title="CSS 栅格"><a href="css-grid.html" target="container-frame"><i class="fa fa-desktop"></i></a></li>
-                        <li class="ui-menu-item" title="table"><a href="table.html" target="container-frame"><i class="fa fa-table"></i></a></li>
+                        <li class="ui-menu-item"><a href="type.html" target="container-frame"><i class="fa fa-text-height"></i></a></li>
                         <li class="ui-menu-item">
                             <a href="#">
                                 <i class="fa fa-check-square"></i>
@@ -47,8 +47,7 @@
                             </ul>
                         </li>
                         <li class="ui-menu-item"><a href="menu.html" target="container-frame"><i class="fa fa-anchor"></i></a></li>
-                        <li class="ui-menu-item"><a href="icons.html" target="container-frame"><i class="fa fa-file-image-o"></i></a></li>
-                        <li class="ui-menu-item"><a href="type.html" target="container-frame"><i class="fa fa-text-height"></i></a></li>
+                        <li class="ui-menu-item"><a href="http://fontello.com/" target="container-frame"><i class="fa fa-file-image-o"></i></a></li>
                         <li class="ui-menu-item"><a href="label.html" target="container-frame"><i class="fa fa-font"></i></a></li>
                     </ul>
                 </div>
