--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         </li>
                         <li class="ui-menu-item"><a href="menu.html" target="container-frame"><i class="fa fa-anchor"></i></a></li>
                         <li class="ui-menu-item"><a href="http://fontello.com/" target="container-frame"><i class="fa fa-file-image-o"></i></a></li>
-                        <li class="ui-menu-item"><a href="label.html" target="container-frame"><i class="fa fa-font"></i></a></li>
+                        <!--<li class="ui-menu-item"><a href="label.html" target="container-frame"><i class="fa fa-font"></i></a></li>-->
                     </ul>
                 </div>
             </div>
