--- a/checkbox.html
+++ b/checkbox.html
@@ -148,8 +148,8 @@
                         </p>
                         <div class="example">
                             <div class="ui-slider">
-                                <input type="checkbox" name="walk" id="slider" />
-                                <label for="slider">Allow others to see when your dog is on a walk</label>
+                                <input type="checkbox" name="walk" id="slider1" />
+                                <label for="slider1">Allow others to see when your dog is on a walk</label>
                             </div>
                         </div>
 
@@ -159,8 +159,8 @@
                         </p>
                         <div class="example">
                             <div class="ui-toggle">
-                                <input type="checkbox" name="walk" id="toggle" />
-                                <label for="toggle">Allow others to see when your dog is on a walk</label>
+                                <input type="checkbox" name="walk" id="toggle1" />
+                                <label for="toggle1">Allow others to see when your dog is on a walk</label>
                             </div>
                         </div>
 
